k8s/plane/04_service.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-admin
  labels:
    app.name: plane-plane-admin
spec:
  ports:
  - name: admin-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.name: plane-plane-admin
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-api
  labels:
    app.name: plane-plane-api
spec:
  clusterIP: None
  ports:
  - name: api-8000
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app.name: plane-plane-api
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-space
  labels:
    app.name: plane-plane-space
spec:
  ports:
  - name: space-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.name: plane-plane-space
---
apiVersion: v1
kind: Service
metadata:
  namespace: plane
  name: plane-web
  labels:
    app.name: plane-plane-web
spec:
  ports:
  - name: web-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.name: plane-plane-web
